--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,10 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -17,33 +13,12 @@
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
             <HBox spacing="10.0">
                <children>
-                  <TextField promptText="username" />
-                  <TextField layoutX="10.0" layoutY="10.0" promptText="password" />
+                  <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="83.0" text="Load File" />
+                  <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="90.0" text="Add Item" />
                   <Region HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" onAction="#showItemSellIn" text="Sell In" />
-                  <Button mnemonicParsing="false" onAction="#showItemQuality" text="Quality" />
-                  <Button layoutX="332.0" layoutY="10.0" mnemonicParsing="false" onAction="#updateQuality" text="Update" />
+                  <Button layoutX="332.0" layoutY="10.0" mnemonicParsing="false" onAction="#updateQuality" prefHeight="23.0" prefWidth="109.0" text="Update" />
                </children>
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
@@ -92,7 +67,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <ListView fx:id="ListViewSellIn" prefHeight="258.0" prefWidth="142.0">
+            <ListView fx:id="ListViewSellIn" prefHeight="272.0" prefWidth="126.0">
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" />
                </VBox.margin>
@@ -108,7 +83,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </VBox.margin>
             </Label>
-            <ListView fx:id="ListViewQuality" prefHeight="258.0" prefWidth="150.0">
+            <ListView fx:id="ListViewQuality" prefHeight="270.0" prefWidth="134.0">
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" />
                </VBox.margin>
