Finish the basic function required by the session4 But still need to improve the code. Like some problems I have written in the README.

--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -37,6 +40,22 @@
       <HBox BorderPane.alignment="CENTER">
          <children>
             <Label prefHeight="15.0" prefWidth="92.0" text="JavaFX" />
+            <BarChart fx:id="SellinBarChart" prefHeight="357.0" prefWidth="350.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </BarChart>
+            <BarChart fx:id="CreationdateBarChart" prefHeight="357.0" prefWidth="350.0">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
          </children>
          <padding>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
